Added deploy stop
